cmake_minimum_required(VERSION 3.21)
project(learncpp17)
set(CMAKE_CXX_STANDARD 17)
message("aaaaaaaaaaaaaaaaaa")
message(${CMAKE_CXX_COMPILER})
message("bbbbbbbbbbbbbbbbbb")
set(CMAKE_CXX_COMPILER "clang++")

add_subdirectory(feature1)
add_subdirectory(feature2)
add_subdirectory(feature3)
add_subdirectory(feature4)
add_subdirectory(feature5)
add_subdirectory(feature6)

